--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,32 +5,11 @@ permalink: /publications/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+![Hyojeong Profile](/images/hprofile.png){: .align-right width="300px"}
+Hello! 👋 I’m Hyojeong Son, a 4th-year PhD student in the Department of Mathematics at the University of Washington, where I work with my advisor, Professor [Christopher Hoffman](http://sites.math.washington.edu/~hoffman/). I’m enthusiastic about probability theory, with a particular focus on particle models like sandpiles and activated random walks. I also enjoy exploring other areas of probability and have recently been working on stable matchings with correlated preferences. I’m eager to keep learning and growing through new ideas and interesting problems.
 
-{% include base_path %}
+I earned my Bachelor's degree from Stony Brook University and a Master's degree from Washington University in St. Louis. 
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
-
+My email address is [hjson@uw.edu](mailto:hjson@uw.edu).
 
 
