--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,9 +1,13 @@
 ---
-layout: archive
-title: "Publications"
-permalink: /publications/
+permalink: /
+title: 
+excerpt: "About me"
 author_profile: true
+redirect_from: 
+  - /publications/
+  - /publications.html
 ---
+
 
 ![Hyojeong Profile](https://github.com/hyojeong-son/hyojeongson.github.io/blob/master/images/hprofile.png?raw=true){: .align-right width="300px"}
 Hello! 👋 I’m Hyojeong Son, a 4th-year PhD student in the Department of Mathematics at the University of Washington, where I work with my advisor, Professor [Christopher Hoffman](http://sites.math.washington.edu/~hoffman/). I’m enthusiastic about probability theory, with a particular focus on particle models like sandpiles and activated random walks. I also enjoy exploring other areas of probability and have recently been working on stable matchings with correlated preferences. I’m eager to keep learning and growing through new ideas and interesting problems.
