--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,11 +1,8 @@
 ---
-permalink: /
-title: 
-excerpt: "About me"
+layout: archive
+title: "Publications"
+permalink: /publications/
 author_profile: true
-redirect_from: 
-  - /publications/
-  - /publications.html
 ---
 
 
@@ -15,3 +12,5 @@ Hello! 👋 I’m Hyojeong Son, a 4th-year PhD student in the Department of Math
 I earned my Bachelor's degree from Stony Brook University and a Master's degree from Washington University in St. Louis. 
 
 My email address is [hjson@uw.edu](mailto:hjson@uw.edu).
+
+
